@@ -14,27 +14,28 @@
 
 namespace MonAPI {
 
-Condition::Condition()
-{
-}
+// Condition::Condition()
+// {
+// }
 
-Condition::~Condition()
-{
+// Condition::~Condition()
+// {
+// }
 
-}
+// intptr_t Condition::waitWithTimeout(Mutex* mutex, intptr_t timeoutMsec)
+// {
+// }
 
-intptr_t Condition::waitWithTimeout(Mutex* mutex, intptr_t timeoutMsec)
-{
-}
-
-intptr_t Condition::wait(Mutex* mutex)
-{
+// intptr_t Condition::wait(Mutex* mutex)
+// {
 
 
-}
+// }
 
-intptr_t Condition::notifyAll()
-{
-}
+// intptr_t Condition::notifyAll()
+// {
+// }
+
+// }
 
 }
